[fix] parse docstring while keeping linebreaks

--- a/source/senfgurke_workbook.cls
+++ b/source/senfgurke_workbook.cls
@@ -8,3 +8,11 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
 
+
+Public Sub dummy()
+
+    Dim x As New TStep
+    
+    x.parse_step_definition "Given a first step ""dummy"""
+    Debug.Print x.get_step_function_name
+End Sub
