--- a/step_definitions/Steps_Parse_Examples.cls
+++ b/step_definitions/Steps_Parse_Examples.cls
@@ -9,7 +9,6 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Dim m_parsed_example As TExample
 Dim m_parsed_background As TBackground
 
 Public Sub Given_an_example_STR_6A35400021EE(step_expressions As Collection)
@@ -42,23 +41,15 @@ Public Sub Given_the_first_step_is_STR_5F91EBC94964(step_expressions As Collecti
                                 & step_expressions(1)
 End Sub
 
-Public Sub Given_this_step_is_followed_by_a_docstring_contain_C4061F67175D(step_expressions As Collection)
-    'Given this step is followed by a docstring containing "this is a docstring"
-    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
-                                & """""""" & vbLf _
-                                & step_expressions(1) & vbLf _
-                                & """"""""
-End Sub
-
 Public Sub Given_a_background_6A351EBB4211()
     'Given a background
     TStepVars.gherkin_text = "Background:"
 End Sub
 
-Public Sub Given_the_first_step_of_the_background_is_STR_BB1462E43AFA(step_expressions As Collection)
-    'Given the first step of the background is {string}
-    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & step_expressions(1)
-End Sub
+'Public Sub Given_the_first_step_of_the_background_is_STR_BB1462E43AFA(step_expressions As Collection)
+'    'Given the first step of the background is {string}
+'    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & step_expressions(1)
+'End Sub
 
 Public Sub Then_the_parsed_result_contains_an_example_7B67C585A7A0()
     'Then the parsed result contains an example
@@ -67,28 +58,34 @@ End Sub
 
 Public Sub When_the_example_is_parsed_CEB09D77F01F()
     'When the example is parsed
-    Set m_parsed_example = New TExample
-    TFeatureParser.parse_steps Split(Trim(TStepVars.gherkin_text), vbLf), 0, m_parsed_example
+    Set TStepVars.example = New TExample
+    TFeatureParser.parse_steps Split(Trim(TStepVars.gherkin_text), vbLf), 0, TStepVars.example
+    If TStepVars.example.Steps.Count = 1 Then
+        Set TStepVars.first_step = TStepVars.example.Steps(1)
+    End If
 End Sub
 
 Public Sub When_the_feature_background_is_parsed_8C5FB8584F5D()
     'When the feature background is parsed
-    Set m_parsed_background = New TBackground
-    TFeatureParser.parse_steps Split(Trim(TStepVars.gherkin_text), vbLf), 0, m_parsed_background
+    Set TStepVars.Background = New TBackground
+    TFeatureParser.parse_steps Split(Trim(TStepVars.gherkin_text), vbLf), 0, TStepVars.Background
+    If TStepVars.Background.Steps.Count = 1 Then
+        Set TStepVars.first_step = TStepVars.Background.Steps(1)
+    End If
 End Sub
 
 Public Sub Then_the_example_clause_from_the_parsed_result_con_C8ADD15947E9()
     'Then the example clause from the parsed result contains all the steps
-    TSpec.expect(m_parsed_example.Steps.Count).to_be 3
-    TSpec.expect(m_parsed_example.Steps(1).SType).to_be STEP_TYPE_GIVEN
-    TSpec.expect(m_parsed_example.Steps(1).Name).to_be "a precondition"
-    TSpec.expect(m_parsed_example.Steps(1).Head).to_be "Given"
-    TSpec.expect(m_parsed_example.Steps(2).SType).to_be STEP_TYPE_WHEN
-    TSpec.expect(m_parsed_example.Steps(2).Name).to_be "action happens"
-    TSpec.expect(m_parsed_example.Steps(2).Head).to_be "When"
-    TSpec.expect(m_parsed_example.Steps(3).SType).to_be STEP_TYPE_THEN
-    TSpec.expect(m_parsed_example.Steps(3).Name).to_be "some result is expected"
-    TSpec.expect(m_parsed_example.Steps(3).Head).to_be "Then"
+    TSpec.expect(TStepVars.example.Steps.Count).to_be 3
+    TSpec.expect(TStepVars.example.Steps(1).SType).to_be STEP_TYPE_GIVEN
+    TSpec.expect(TStepVars.example.Steps(1).Name).to_be "a precondition"
+    TSpec.expect(TStepVars.example.Steps(1).Head).to_be "Given"
+    TSpec.expect(TStepVars.example.Steps(2).SType).to_be STEP_TYPE_WHEN
+    TSpec.expect(TStepVars.example.Steps(2).Name).to_be "action happens"
+    TSpec.expect(TStepVars.example.Steps(2).Head).to_be "When"
+    TSpec.expect(TStepVars.example.Steps(3).SType).to_be STEP_TYPE_THEN
+    TSpec.expect(TStepVars.example.Steps(3).Name).to_be "some result is expected"
+    TSpec.expect(TStepVars.example.Steps(3).Head).to_be "Then"
 End Sub
 
 Public Sub Then_the_type_of_the_second_step_is_set_to_STR_9CA91DFBD6DD(step_expressions As Collection)
@@ -98,7 +95,7 @@ End Sub
 
 Public Sub Then_first_step_is_changed_to_STR_26F73CDF60C2(step_expressions As Collection)
     'Then first step is changed to {string}
-    TSpec.expect(m_parsed_example.Steps(1).StepDefinition).to_be step_expressions(1)
+    TSpec.expect(TStepVars.example.Steps(1).StepDefinition).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_first_step_of_the_background_is_changed_to_ST_43C166035DB0(step_expressions As Collection)
