--- a/source/TReport.cls
+++ b/source/TReport.cls
@@ -1,20 +1,15 @@
+VERSION 1.0 CLASS
+BEGIN
+  MultiUse = -1  'True
+END
 Attribute VB_Name = "TReport"
+Attribute VB_GlobalNameSpace = False
+Attribute VB_Creatable = False
+Attribute VB_PredeclaredId = False
+Attribute VB_Exposed = False
 Option Explicit
 
-Public Const MSG_TYPE = "message_type"
-Public Const MSG_CONTENT = "message_content"
-Public Const MSG_STATUS = "status"
-Public Const MSG_ERR = "error_message"
-
-Public Const TYPE_FEATURE_NAME = "feature_name"
-Public Const TYPE_DESC = "description"
-Public Const TYPE_RULE = "rule"
-Public Const TYPE_EXAMPLE_TITLE = "example_title"
-Public Const TYPE_STEP = "step"
-Public Const TYPE_CODE_TEMPLATE = "code_template"
-
 Dim m_report_formatter As Variant
-Dim m_logger As Logger
 
 Public Sub report(message_type As String, message_content As String, Optional status, Optional err_msg)
 
@@ -23,14 +18,14 @@ Public Sub report(message_type As String, message_content As String, Optional st
     If Not Report_Formatter Is Nothing Then
         Set msg_package = New Collection
         If IsMissing(status) Then
-            msg_package.Add vbNullString, TReport.MSG_STATUS
+            msg_package.Add vbNullString, REPORT_MSG_STATUS
         Else
-            msg_package.Add status, TReport.MSG_STATUS
+            msg_package.Add status, REPORT_MSG_STATUS
         End If
         If IsMissing(err_msg) Then
-            msg_package.Add vbNullString, TReport.MSG_ERR
+            msg_package.Add vbNullString, REPORT_MSG_ERR
         Else
-            msg_package.Add err_msg, TReport.MSG_ERR
+            msg_package.Add err_msg, REPORT_MSG_ERR
         End If
         Set msg_package = build_msg_package(message_type, message_content, CStr(status), CStr(err_msg))
         Report_Formatter.process_msg msg_package
@@ -46,10 +41,10 @@ Public Function build_msg_package(message_type As String, message_content As Str
     If IsMissing(err_msg) Then err_msg = vbNullString
     Set msg_package = New Collection
     With msg_package
-        .Add message_type, TReport.MSG_TYPE
-        .Add message_content, TReport.MSG_CONTENT
-        .Add status, TReport.MSG_STATUS
-        .Add err_msg, TReport.MSG_ERR
+        .Add message_type, REPORT_MSG_TYPE
+        .Add message_content, REPORT_MSG_CONTENT
+        .Add status, REPORT_MSG_STATUS
+        .Add err_msg, REPORT_MSG_ERR
     End With
     Set build_msg_package = msg_package
 End Function
@@ -63,14 +58,6 @@ End Property
 
 Public Property Let Report_Formatter(ByVal new_report_formatter As Variant)
     Set m_report_formatter = new_report_formatter
-End Property
-
-Public Property Get Log() As Logger
-
-    If m_logger Is Nothing Then
-        Set m_logger = New Logger
-    End If
-    Set Log = m_logger
 End Property
 
 Public Sub report_code_templates_for_missing_steps()
